Bug 116182 - REGRESSION(r147004): Find on Page banner doesn't appear while Web Inspector is visible
Summary: REGRESSION(r147004): Find on Page banner doesn't appear while Web Inspector i...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Timothy Hatcher
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2013-05-15 12:50 PDT by Timothy Hatcher
Modified: 2013-05-16 12:13 PDT (History)
4 users (show)

See Also:


Attachments
Patch (4.02 KB, patch)
2013-05-15 12:52 PDT, Timothy Hatcher
benjamin: review+
timothy: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Timothy Hatcher 2013-05-15 12:50:01 PDT
The Find on Page banner doesn't appear when Web Inspector is docked to the bottom of the window. 

1. Show Web Inspector
2. Click page content to give focus to the website
3. Command-F
4. Notice that there's a focus ring around a text input, but the bar is invisible

<rdar://problem/13857423>
Comment 1 Timothy Hatcher 2013-05-15 12:52:20 PDT
Created attachment 201869 [details]
Patch
Comment 2 Alexey Proskuryakov 2013-05-15 12:54:30 PDT
Looks good to me.
Comment 3 Benjamin Poulain 2013-05-15 14:23:28 PDT
Comment on attachment 201869 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=201869&action=review

This looks a bit fragile but definitely not more than the previous code.

If the Y coordinate are inverted, this patch looks correct.

> Source/WebKit2/UIProcess/mac/WebInspectorProxyMac.mm:628
> +    CGFloat inspectedViewTop = NSMaxY(inspectedViewFrame);

I am confused, for me the Max Y would be the bottom of a view.

Is this because of OS X sick inverted coordinates?
Comment 4 Timothy Hatcher 2013-05-16 05:15:04 PDT
Comment on attachment 201869 [details]
Patch

Yes, the coords are flipped by default on OS X.
Comment 5 Timothy Hatcher 2013-05-16 12:13:16 PDT
r150200