Make the Find Banner in Safari work again with the docked Web Inspector.

https://webkit.org/b/116182
rdar://problem/13857423

Reviewed by Benjamin Poulain.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::inspectedViewFrameDidChange):
(WebKit::WebInspectorProxy::platformDetach):
Preserve the top position of the inspected view so banners in Safari still work.

Canonical link: https://commits.webkit.org/134624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150200 268f45cc-cd09-0410-ab3c-d52691b4dbfc